# discord-rpc

./: .gitignore  0001-kms.patch  CMakeCache.txt  CMakeLists.txt  LICENSE  Makefile  Makefile copy  README  README.md  chal  cmake_install.cmake  discord-rpc  discord-rpc.cpp  null.d  try2.tar.xz
